Trying to add some debugging

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -100,6 +100,10 @@ jobs:
   - template: tools/ci/azure/install_safari.yml
   - template: tools/ci/azure/update_hosts.yml
   - template: tools/ci/azure/update_manifest.yml
+  - script: defaults find DidMigrateWebDriverAllowRemoteAutomation || true
+    displayName: 'DidMigrateWebDriverAllowRemoteAutomation'
+  - script: cat ~/Library/WebDriver/com.apple.SafariTechnologyPreview.plist || true
+    displayName: 'com.apple.SafariTechnologyPreview.plist'
   - script: no_proxy='*' ./wpt run --yes --no-manifest-update --manifest MANIFEST.json --metadata infrastructure/metadata/ --log-mach - --log-mach-level info --channel preview safari infrastructure/ || true
     displayName: 'Run tests (Safari Technology Preview)'
   - script: sudo sysdiagnose -f $(Build.ArtifactStagingDirectory)/ -b -u
