--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -102,6 +102,10 @@ jobs:
   - template: tools/ci/azure/update_manifest.yml
   - script: defaults find DidMigrateWebDriverAllowRemoteAutomation || true
     displayName: 'DidMigrateWebDriverAllowRemoteAutomation'
+  - script: ls -l ~/Library || true
+    displayName: 'ls Library'
+  - script: ls -l ~/Library/WebDriver || true
+    displayName: 'ls Library/WebDriver'
   - script: cat ~/Library/WebDriver/com.apple.SafariTechnologyPreview.plist || true
     displayName: 'com.apple.SafariTechnologyPreview.plist'
   - script: no_proxy='*' ./wpt run --yes --no-manifest-update --manifest MANIFEST.json --metadata infrastructure/metadata/ --log-mach - --log-mach-level info --channel preview safari infrastructure/ || true
